# course_project_multithreaded-ftp-server

./: CMakeLists.txt  README.md
LAUNCHING_SERVER/client/: FTPClient
LAUNCHING_SERVER/server/: FTPServer
LAUNCHING_SERVER/server_core/resources/: config.json
client_run/: client.cpp
docs (rus)/: FTPServer Пояснительная записка.docx
docs (rus)/Приложения/: Приложение А. Ведомость документов.vsd  Приложение Б. Структурная схема.vsd  Приложение В. Диаграмма классов.vsd  Приложение Г. Схема алгоритма функции handlingAccept().vsd  Приложение Д. Схема алгоритма функции parse_current_dir().vsd  Приложение Е. Код программы.docx
ftp_specification/: FTPSpecification.cpp  FTPSpecification.h
json_reader/include/: json_reader.h
json_reader/source/: json_reader.cpp
server_core/include/: ServerCore.h  general.h
server_core/resources/: config.json  info_about_config.txt
server_core/source/: ServerCore.cpp
server_run/: server.cpp
